--- a/content.html
+++ b/content.html
@@ -7,11 +7,9 @@
 
 <py-cell>fruits = ["apple", "banana", "orange"]
 numbers = [1, 2, 3, 4, 5]
-mixed = ["a", 1, True, 2.5]
 
 print(fruits)
-print(numbers)
-print(mixed)</py-cell>
+print(numbers)</py-cell>
 
 <h2>Empty Lists</h2>
 
@@ -27,5 +25,3 @@ print(empty_list)</py-cell>
 <py-cell>mixed_list = ["hello", 42, 3.14, True, [1, 2, 3]]
 
 print(mixed_list)</py-cell>
-
- 
